# MLDeployment

./: LICENSE  pyproject.toml
mldeployment/: marco_test.py
tests/: test_mldeployment.py
