[tool.poetry]
name = "MLDeployment"
version = "0.1.0"
description = ""
authors = ["mdechatre <mdechatre@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.0"
numpy = "^1.18.2"
pandas = "^1.0.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
